# web-scraping-demo

./: README.md  pyproject.toml
src/: main.py
